--- a/manifest.json
+++ b/manifest.json
@@ -6,12 +6,8 @@
 		"minimum_chrome_version": "46",
 		"background": {
 			"scripts": [
-			"scripts/require.js",
-			"scripts/node_modules/express/index.js",
 			"scripts/spotify-web-api.js",
-			"scripts/handlebars.js",
-			"scripts/jquery.js",
-			"main.js"
+			"scripts/handlebars.js"
 			],
 			"persistent": true
 		},
